--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ web-sys = { version = "0.3.*", features = [
     "DomRect",
 ] }
 yew = { version = "0.21", features = ["csr"] }
+yew-router = "0.18"
 yew-hooks = { version = "0.3.2" }
 yew-i18n = "0.1.2"
 yew-preview = { git = "https://github.com/chriamue/yew-preview", optional = true }
