--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ default = [
     "storage",
     "gdrive",
     "tour",
+    "solana",
 ]
 backup = []
 certificates = [
@@ -33,15 +34,19 @@ storage = ["gloo/storage"]
 yew-preview = ["dep:yew-preview"]
 gdrive = ["backup"]
 tour = ["yew-tou-rs"]
+solana = ["solana-sdk", "wallet-adapter", "spl-token"]
 
 [dependencies]
 async-trait = "0.1.83"
+bincode = "1.3.3"
 chrono = "0.4.38"
 console_log = "1.0"
+futures = "0.3"
 log = "0.4.21"
 implicit-clone = "0.4.9"
 indexmap = "2.2.6"
 gloo = { version = "0.11.0", features = ["net"] }
+hex = "0.4.3"
 konnektoren-core = { git = "https://github.com/konnektoren/konnektoren-rs.git", features = [
     "js",
 ] }
@@ -85,6 +90,9 @@ anyhow = "1.0.86"
 serde = { version = "1.0.204", features = ["derive"] }
 js-sys = "0.3.69"
 serde_yaml = "0.9.34+deprecated"
+wallet-adapter = { version = "1.0.4-beta", optional = true }
+solana-sdk = { version = "2.1.2", optional = true }
+spl-token = { version = "7.0.0", optional = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
