--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,3 +100,7 @@ tokio = { version = "1.0", features = ["rt", "macros"] }
 regex = "1.5"
 walkdir = "2.3"
 serde_json = "1.0"
+
+[build-dependencies]
+anyhow = "1.0"
+vergen = { version = "9.0.0", features = ["build", "cargo", "rustc"] }
