--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ hex = "0.4.3"
 konnektoren-core = { git = "https://github.com/konnektoren/konnektoren-rs.git", features = [
     "js",
 ] }
+konnektoren-platform = { git = "https://github.com/konnektoren/konnektoren-rs.git" }
 markdown = { version = "1.0.0-alpha.18" }
 serde_json = "1.0.117"
 thiserror = "2.0"
@@ -83,9 +84,10 @@ yew-chat = { git = "https://github.com/chriamue/yew-chat", features = [
 yew-tou-rs = { git = "https://github.com/chriamue/yew-tou-rs/", branch = "main", features = [
     "markdown",
 ], optional = true }
-uuid = { version = "1.10.0", features = ["v4"] }
+uuid = { version = "1.10.0", features = ["v4", "fast-rng", "js"] }
 urlencoding = "2.1.3"
 rand = "0.8"
+rust-embed = "8.5.0"
 anyhow = "1.0.86"
 serde = { version = "1.0.204", features = ["derive"] }
 js-sys = "0.3.69"
