--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,7 +86,10 @@ yew-tou-rs = { git = "https://github.com/chriamue/yew-tou-rs/", branch = "main",
 uuid = { version = "1.10.0", features = ["v4", "fast-rng", "js"] }
 urlencoding = "2.1.3"
 rand = "0.8"
-rust-embed = "8.5.0"
+rust-embed = { version = "8.5.0", features = [
+    "interpolate-folder-path",
+    "debug-embed",
+] }
 anyhow = "1.0.86"
 serde = { version = "1.0.204", features = ["derive"] }
 js-sys = "0.3.69"
@@ -101,6 +104,7 @@ tokio = { version = "1.0", features = ["rt", "macros"] }
 regex = "1.5"
 walkdir = "2.3"
 serde_json = "1.0"
+env_logger = "0.10"
 
 [build-dependencies]
 anyhow = "1.0"
