--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,6 +99,9 @@ solana-sdk = { version = "2.1.2", optional = true }
 spl-token = { version = "7.0.0", optional = true }
 
 [dev-dependencies]
+konnektoren-platform = { git = "https://github.com/konnektoren/konnektoren-rs.git", features = [
+    "tools",
+] }
 wasm-bindgen-test = "0.3"
 tokio = { version = "1.0", features = ["rt", "macros"] }
 regex = "1.5"
