:sparkles::page_facing_up: adds app dependencies component

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Setup styles
         run: just setup-styles
 
+      - name: Setup SBOM
+        run: just sbom
+
       - name: Build
         run: trunk build --features=yew-preview --release --public-url /konnektoren-yew/
 
