--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,15 +44,16 @@ bincode = "1.3.3"
 chrono = "0.4.38"
 console_log = "1.0"
 futures = "0.3"
-log = "0.4.21"
-implicit-clone = "0.4.9"
-indexmap = "2.2.6"
+getrandom = { version = "0.3", features = ["wasm_js"] }
 gloo = { version = "0.11.0", features = ["net"] }
 hex = "0.4.3"
+implicit-clone = "0.4.9"
+indexmap = "2.2.6"
 konnektoren-core = { git = "https://github.com/konnektoren/konnektoren-rs.git", features = [
     "js",
 ] }
 konnektoren-platform = { git = "https://github.com/konnektoren/konnektoren-rs.git" }
+log = "0.4.21"
 markdown = { version = "1.0.0-alpha.18" }
 serde_json = "1.0.117"
 thiserror = "2.0"
@@ -85,7 +86,7 @@ yew-chat = { git = "https://github.com/chriamue/yew-chat", features = [
 yew-tou-rs = { git = "https://github.com/chriamue/yew-tou-rs/", branch = "main", features = [
     "markdown",
 ], optional = true }
-uuid = { version = "1.10.0", features = ["v4", "fast-rng", "js"] }
+uuid = { version = "1.15.0", features = ["v4", "fast-rng", "js"] }
 urlencoding = "2.1.3"
 rand = "0.8"
 regex = "1.5"
@@ -97,7 +98,7 @@ anyhow = "1.0.86"
 serde = { version = "1.0.204", features = ["derive"] }
 js-sys = "0.3.69"
 serde_yaml = "0.9.34+deprecated"
-wallet-adapter = { version = "1.0.4-beta", optional = true }
+wallet-adapter = { version = "1.1", optional = true }
 solana-sdk = { version = "2.1.2", optional = true }
 spl-token = { version = "7.0.0", optional = true }
 
