--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -6,37 +6,155 @@ on:
       - main
     tags:
       - "*"
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build_and_deploy_main:
-    name: Rust project for main branch
-    runs-on: ubuntu-22.04
-    if: github.ref == 'refs/heads/main'
+  setup:
+    name: Setup Build Environment
+    runs-on: ubuntu-24.04
+    outputs:
+      cache-key: ${{ steps.cache-key.outputs.value }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions-rs/toolchain@v1
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           target: wasm32-unknown-unknown
           override: true
 
-      - uses: jetli/trunk-action@v0.5.0
+      - name: Generate cache key
+        id: cache-key
+        run: echo "value=${{ github.sha }}" >> $GITHUB_OUTPUT
+
+      - name: Install WebAssembly tools
+        run: |
+          # Install wasm-bindgen
+          WASM_BINDGEN_VERSION="0.2.100"
+          curl -sL https://github.com/rustwasm/wasm-bindgen/releases/download/${WASM_BINDGEN_VERSION}/wasm-bindgen-${WASM_BINDGEN_VERSION}-x86_64-unknown-linux-musl.tar.gz | tar xzf -
+          sudo mv wasm-bindgen-${WASM_BINDGEN_VERSION}-x86_64-unknown-linux-musl/wasm-bindgen /usr/local/bin/
+          rm -rf wasm-bindgen-${WASM_BINDGEN_VERSION}-x86_64-unknown-linux-musl
+
+          # Install wasm-opt
+          BINARYEN_VERSION="version_116"
+          curl -sL https://github.com/WebAssembly/binaryen/releases/download/$BINARYEN_VERSION/binaryen-$BINARYEN_VERSION-x86_64-linux.tar.gz | tar xzf -
+          sudo cp binaryen-$BINARYEN_VERSION/bin/wasm-opt /usr/local/bin/
+          rm -rf binaryen-$BINARYEN_VERSION
+
+          # Install tailwindcss-extra
+          TAILWIND_EXTRA_VERSION="2.0.4"
+          sudo curl -sL -o /usr/local/bin/tailwindcss-extra "https://github.com/dobicinaitis/tailwind-cli-extra/releases/download/v${TAILWIND_EXTRA_VERSION}/tailwindcss-extra-linux-x64"
+          sudo chmod +x /usr/local/bin/tailwindcss-extra
+
+      - name: Install trunk
+        uses: jetli/trunk-action@v0.5.0
         with:
           version: "latest"
 
-      - uses: extractions/setup-just@v1
+      - name: Install wasm-pack
+        uses: jetli/wasm-pack-action@v0.4.0
+        with:
+          version: "latest"
+
+      - name: Install just
+        uses: extractions/setup-just@v1
         with:
           just-version: "1.13"
 
       - name: Setup styles
         run: just setup-styles
 
-      - name: Setup SBOM
-        run: just sbom
+      - name: Cache build environment
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ steps.cache-key.outputs.value }}
+
+  build:
+    needs: setup
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: wasm32-unknown-unknown
+          override: true
+
+      - name: Restore cached environment
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ needs.setup.outputs.cache-key }}
+
+      - name: Install custom trunk fork
+        run: |
+          cargo install --force --git https://github.com/chriamue/trunk --branch fix/tailwindcss-extra-download-linux trunk
 
       - name: Build
-        run: trunk build --features=yew-preview --release --public-url /konnektoren-yew/
+        run: trunk build --verbose --features=yew-preview --release --public-url /konnektoren-yew/
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist/
+          retention-days: 7
+
+  sbom:
+    needs: setup
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Restore cargo cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ needs.setup.outputs.cache-key }}
+
+      - name: Install just
+        uses: extractions/setup-just@v1
+        with:
+          just-version: "1.13"
+
+      - name: Generate SBOM
+        run: just sbom
+
+      - name: Upload SBOM
+        uses: actions/upload-artifact@v4
+        with:
+          name: sbom
+          path: sbom/
+          retention-days: 7
+
+  deploy:
+    needs: [build, sbom]
+    runs-on: ubuntu-24.04
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
