--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,11 @@ log = "0.4.21"
 markdown = { version = "1.0.0-alpha.23" }
 serde_json = "1.0.117"
 thiserror = "2.0"
-wasm-bindgen = { version = "0.2", features = ["serde"] }
+wasm-bindgen = { version = "0.2.100", features = [
+    "spans",
+    "std",
+    "serde",
+], default-features = false }
 wasm-bindgen-futures = { version = "0.4.42" }
 web-sys = { version = "0.3.*", features = [
     "HtmlInputElement",
