--- a/Trunk.toml
+++ b/Trunk.toml
@@ -1,9 +1,5 @@
 [serve]
-# The address to serve on LAN.
-address = "127.0.0.1"
-# The address to serve on WAN.
-# address = "0.0.0.0"
-# The port to serve on.
+addresses = ["127.0.0.1"]
 port = 8080
 
 [tools]
