--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,15 @@ gdrive = ["backup"]
 tour = ["yew-tou-rs"]
 solana = ["solana-sdk", "wallet-adapter", "spl-token"]
 sbom = ["cargo-cyclonedx"]
-csr = ["yew/csr", "gloo", "web-sys", "js-sys", "wasm-bindgen", "yew-hooks"]
+csr = [
+    "yew/csr",
+    "gloo",
+    "web-sys",
+    "js-sys",
+    "wasm-bindgen",
+    "yew-hooks",
+    "uuid/js",
+]
 ssr = ["yew/ssr"]
 server = ["ssr", "axum", "tokio/full"]
 
@@ -99,7 +107,7 @@ yew-chat = { git = "https://github.com/chriamue/yew-chat", features = [
 yew-tou-rs = { git = "https://github.com/chriamue/yew-tou-rs/", branch = "main", features = [
     "markdown",
 ], optional = true }
-uuid = { version = "1.15.0", features = ["v4", "fast-rng", "js"] }
+uuid = { version = "1.15.0", features = ["v4", "fast-rng"] }
 urlencoding = "2.1.3"
 rand = "0.8"
 regex = "1.5"
