--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -26,43 +26,18 @@ jobs:
           target: wasm32-unknown-unknown
           override: true
 
-      - name: Generate cache key
-        id: cache-key
-        run: echo "value=${{ github.sha }}" >> $GITHUB_OUTPUT
-
-      - name: Install WebAssembly tools
-        run: |
-          # Install wasm-bindgen
-          WASM_BINDGEN_VERSION="0.2.100"
-          curl -sL https://github.com/rustwasm/wasm-bindgen/releases/download/${WASM_BINDGEN_VERSION}/wasm-bindgen-${WASM_BINDGEN_VERSION}-x86_64-unknown-linux-musl.tar.gz | tar xzf -
-          sudo mv wasm-bindgen-${WASM_BINDGEN_VERSION}-x86_64-unknown-linux-musl/wasm-bindgen /usr/local/bin/
-          rm -rf wasm-bindgen-${WASM_BINDGEN_VERSION}-x86_64-unknown-linux-musl
-
-          # Install wasm-opt
-          BINARYEN_VERSION="version_116"
-          curl -sL https://github.com/WebAssembly/binaryen/releases/download/$BINARYEN_VERSION/binaryen-$BINARYEN_VERSION-x86_64-linux.tar.gz | tar xzf -
-          sudo cp binaryen-$BINARYEN_VERSION/bin/wasm-opt /usr/local/bin/
-          rm -rf binaryen-$BINARYEN_VERSION
-
-          # Install tailwindcss-extra
-          TAILWIND_EXTRA_VERSION="2.0.4"
-          sudo curl -sL -o /usr/local/bin/tailwindcss-extra "https://github.com/dobicinaitis/tailwind-cli-extra/releases/download/v${TAILWIND_EXTRA_VERSION}/tailwindcss-extra-linux-x64"
-          sudo chmod +x /usr/local/bin/tailwindcss-extra
-
-      - name: Install trunk
-        uses: jetli/trunk-action@v0.5.0
-        with:
-          version: "latest"
-
-      - name: Install wasm-pack
-        uses: jetli/wasm-pack-action@v0.4.0
-        with:
-          version: "latest"
+      - uses: cargo-bins/cargo-binstall@main
+      - name: Install Trunk
+        run: cargo binstall trunk
 
       - name: Install just
         uses: extractions/setup-just@v1
         with:
           just-version: "1.13"
+
+      - name: Generate cache key
+        id: cache-key
+        run: echo "value=${{ github.sha }}" >> $GITHUB_OUTPUT
 
       - name: Setup styles
         run: just setup-styles
@@ -100,9 +75,9 @@ jobs:
             target/
           key: ${{ runner.os }}-cargo-${{ needs.setup.outputs.cache-key }}
 
-      - name: Install custom trunk fork
-        run: |
-          cargo install --force --git https://github.com/chriamue/trunk --branch fix/tailwindcss-extra-download-linux trunk
+      - uses: cargo-bins/cargo-binstall@main
+      - name: Install Trunk
+        run: cargo binstall trunk
 
       - name: Build
         run: trunk build --verbose --features=yew-preview,csr --release --public-url /konnektoren-yew/
