--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,6 +88,10 @@ wasm-bindgen = { version = "0.2.100", optional = true, features = [
 ], default-features = false }
 wasm-bindgen-futures = { version = "0.4.42" }
 web-sys = { version = "0.3.*", optional = true, features = [
+    "Document",
+    "EventListener",
+    "MouseEvent",
+    "Node",
     "HtmlInputElement",
     "HtmlAudioElement",
     "AudioContext",
